# jobmatch

./: .flake8  README.md  pyproject.toml
.github/workflows/: backend.yml  django.yml
candidato/: models.py  views.py
candidato/migrations/: 0001_initial.py  0002_initial.py  0002_rename_vagas_candidato_vaga.py
choices/: choices.py
core/: settings.py  urls.py
core/candidato/: apps.py
core/usuario/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
core/usuario/migrations/: 0001_initial.py
core/usuario/templates/users/: login.html  register_candidato.html  register_empresa.html
core/vaga/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
core/vaga/migrations/: 0001_initial.py
core/vaga/templates/vagas/: candidatar_vaga.html  criar_vaga.html  deletar_vagas.html  detalhe_vaga.html  editar_vaga.html  (+2 more)
core/vaga/tests/: test_models.py  test_views.py
empresa/: models.py
empresa/migrations/: 0001_initial.py  0002_remove_empresa_nome_alter_empresa_email_vaga.py
templates/: base.html
usuarios/: forms.py  models.py  test_models.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_active_and_more.py  0002_alter_user_managers_alter_user_is_company.py  0003_alter_user_groups_alter_user_is_active_and_more.py
usuarios/templates/usuarios/: cadastro.html  home.html
vagas/: forms.py  models.py  test_models.py  urls.py  views.py
vagas/migrations/: 0001_initial.py
vagas/templates/vagas/: cadastrar_vagas.html  candidatar_vaga.html  lista_vagas.html  listar_vagas.html  saiba_mais.html
